--- a/Assignments/Project/camera/templates/index.html
+++ b/Assignments/Project/camera/templates/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
-    <title>Pi Video Surveillance</title>
+    <title>Pi Camera</title>
   </head>
   <body>
-    <h1>Pi Video Surveillance</h1>
+    <h1>Pi Camera</h1>
     <img src="{{ url_for('video_feed') }}">
-    <h2><a href="{{ url_for('motion_detect') }}"></a> </h2>
   </body>
 </html>
